<resources>
    <string name="app_name">ItStepAndroidProject</string>
    <!--AuthorizationActivity-->
    <string name="authorizationactivity_login">Логин</string>
    <string name="authorizationactivity_password">Пароль</string>
    <string name="authorizationactivity_enter">Войти</string>
    <string name="authorizationactivity_share">Поделиться</string>
    <string name="authorizationactivity_success">Вы успешно авторизовались!</string>
    <string name="authorizationactivity_wronglogin">Неверный логин!</string>
    <string name="authorizationactivity_wrongpassword">Неверный пароль!</string>
    <string name="authorizationactivity_phonemask">+7 (###) ###-##-##</string>
    <string name="authorizationactivity_cardnumbermask">####-####-####-####</string>
    <string name="authorizationactivity_runcamera">Открыть камеру</string>
    <!--SecondActivity-->
    <string name="secondactivity_happytext">Happy Text</string>
    <string name="secondactivity_sadtext">Sad Text</string>
    <string name="secondactivity_glorytext">Glory Text</string>
    <string name="secondactivity_textviewhint">Text will be displayed here!</string>
    <!--CommonStrings-->
</resources>
