<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.AuthorizationActivity"
        android:orientation="vertical">

    <android.support.v7.widget.Toolbar
            android:id="@+id/progressbar_authorizationactivity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <android.support.design.widget.TextInputLayout
            android:theme="@style/EditTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/edittext_authorizationactivity_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:inputType="text"
                android:hint="@string/authorizationactivity_login"
                android:maxLines="1"
                android:textColorHint="@color/authorizationactivity_hintcolor_blue"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:theme="@style/EditTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <EditText
            android:id="@+id/edittext_authorizationactivity_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:inputType="textPassword"
            android:hint="@string/authorizationactivity_password"
            android:maxLines="1"
            android:textColorHint="@color/authorizationactivity_hintcolor_blue"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/button_authorizationactivity_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:text="@string/authorizationactivity_enter"
            android:background="@color/authorizationactivity_hintcolor_blue"
            android:textColor="@android:color/white"/>

</LinearLayout>